# dependency_provider

./: .travis.yml  Cargo.toml  README.md
ci/: install.sh  script.sh
src/: global_provider.rs  lib.rs
